--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -4,33 +4,28 @@
 	"output": "HDMI-A-1", 
     "modules-left": [
         "sway/workspaces", 
-        "custom/gameon",
+        "sway/mode",
     ],
     "modules-right": [
-        "sway/mode",
-        "custom/easy",
+        "custom/gameon",
         "custom/cpu",
         "custom/mem",
-//        "custom/ds4_bat",
- //       "custom/countdown",
         "custom/volume",
         "custom/pymor",
-    //    "custom/variant",
         "custom/clock",
         ],
-
     "sway/workspaces": {
         "disable-scroll": true,
         "all-outputs": false,
         "format": "{icon}",
         "format-icons": {
-            "1": "TRM",
+            "1": "TER",
             "2": "WEB",
-            "3": "RD",
-            "4": "NOTES",
+            "3": "RED",
+            "4": "NOT",
 
-            "urgent": "",
-            "default": "",
+            "urgent": "CIT",
+            "default": "ATT",
         },
         "persistent-workspaces": {
             "1": ["HDMI-A-1"], // Always show a workspace with name '3', on all outputs if it does not exists
@@ -39,55 +34,21 @@
             "4": ["HDMI-A-1"], // Always show a workspace with name '3', on all outputs if it does not exists
         }
     },
+  "sway/mode": {
+    "format": "SCRATCH",
+  },
 "custom/gameon": {
     "exec": "/home/digo/.config/waybar/custom_widgets/gameon.py",
     "interval": 2,
     "return-type": "json",
     "tooltip": false
   },
-"custom/countdown": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/countdown.sh",
-    "interval": 1,
-    "return-type": "json",
-    "tooltip": false
-    }, 
-"sway/mode": {
-    "format": "",
-},
 "custom/clock": {
     "exec": "/home/digo/.config/waybar/custom_widgets/day.py",
-    "interval": 2,
+    "interval": 60,
     "return-type": "json",
     "tooltip": false
     },
-"clock": {
-    "interval": 60,
-    "format": "<span rise='5000' size='11000'></span> <span rise='3500'>{:%H:%M <span size='15000' foreground='#4c566a'>|</span> %a}</span>",
-    "tooltip": false
-  },
-  "custom/ds4_bat": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/ds4_bat.sh",
-    "interval": 1,
-    "return-type": "json",
-    "on-click-middle": "dsbattery -d",
-    "tooltip": false
-  },
-  "custom/easy": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/preset.py",
-    "interval": 2,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/separator": {
-    "format":"|",
-    "interval": 3600
-  },
-  "custom/stretch": {
-    "exec": "/home/digo/.config/waybar/scripts/custom_widgets.py stretch",
-    "interval": 2,
-    "return-type": "json",
-    "tooltip": false
-  },
   "custom/pymor": {
     "exec": "/home/digo/.config/waybar/custom_widgets/pomodoro.py",
     "interval": 1,
@@ -98,41 +59,10 @@
   },
   "custom/volume": {
     "exec": "/home/digo/.config/waybar/custom_widgets/volume.py",
-    "interval": 1,
     "on-click": "pavucontrol",
     "return-type": "json",
-    "tooltip": false
-  },
-  "pulseaudio": {
-    "format": "<span font_family='HeavyData Nerd Font' font_weight='ultralight'>VOL:</span>{volume}%",
-    "format-bluetooth": "{icon} {volume}%",
-    "format-muted": "",
-    "format-icons": {
-      "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
-      "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
-      "headphone": "",
-      "hands-free": "",
-      "headset": "",
-      "phone": "",
-      "phone-muted": "",
-      "portable": "",
-      "car": "",
-      "default": ["", ""]
-    },
-    "scroll-step": 1,
-    "states": {
-      "normal": 40,
-      "warning": 50,
-      "critical": 100
-    },
-    "on-click": "pavucontrol",
-    "ignored-sinks": ["Easy Effects Sink"]
-  },
-  "custom/cpu-temp": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/temp.py",
-    "interval": 2,
-    "return-type": "json",
-    "tooltip": false
+    "tooltip": false,
+    "signal": 13
   },
   "custom/cpu": {
     "exec": "/home/digo/.config/waybar/custom_widgets/cpu.py",
@@ -146,23 +76,17 @@
     "return-type": "json",
     "tooltip": false
   },
-  "custom/disk-root": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/root.py",
-    "interval": 1,
-    "return-type": "json",
-    "tooltip": false
-  },
 }, {
     "layer": "top",
     "name": "bar2",
     "output": "VGA-1",
     "modules-left": [
         "sway/workspaces", 
+        "sway/mode",
     ],
     "modules-right": [
-        "sway/mode",
-        //"custom/easy",
         "custom/variant",
+        "custom/easy",
         "custom/cpu-temp",
         "custom/disk-root",
         "custom/disk-home",
@@ -176,13 +100,13 @@
         "format": "{icon}",
         "format-icons": {
             "5": "WEB",
-            "6": "GL",
-            "7": "GMS",
-            "8": "ST",
+            "6": "GLH",
+            "7": "GAM",
+            "8": "STD",
             "9": "VID",
 
-            "urgent": "",
-            "default": "",
+            "urgent": "CIT",
+            "default": "ATT",
         },
         "persistent-workspaces": {
             "5": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
@@ -192,62 +116,36 @@
             "9": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
         }
     },
-"sway/mode": {
-    "format": "",
-},
+  "sway/mode": {
+    "format": "SCRATCH",
+  },
+  "custom/easy": {
+    "exec": "/home/digo/.config/waybar/custom_widgets/preset.py",
+    "interval": 2,
+    "return-type": "json",
+    "tooltip": false
+  },
   "custom/cpu-temp": {
     "exec": "/home/digo/.config/waybar/custom_widgets/temp.py",
-    "interval": 2,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/cpu": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/cpu.sh",
-    "interval": 2,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/mem": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/ram.py",
-    "interval": 4,
+    "interval": 10,
     "return-type": "json",
     "tooltip": false
   },
   "custom/disk-root": {
     "exec": "/home/digo/.config/waybar/custom_widgets/root.py",
-    "interval": 1,
+    "interval": 60,
     "return-type": "json",
     "tooltip": false
   },
-"custom/clock": {
+ "custom/clock": {
     "exec": "/home/digo/.config/waybar/custom_widgets/day.py",
-    "interval": 2,
+    "interval": 60,
     "return-type": "json",
     "tooltip": false
     },
-
-  "clock": {
-    "interval": 60,
-    "format": "<span rise='5000' size='11000'></span> <span rise='3500'>{:%H:%M <span size='15000' foreground='#4c566a'>|</span> %d <span size='15000' foreground='#4c566a'>|</span> %a}</span>",
-    "tooltip": false
-  },
-  "hyprland/submap": {
-    "format": " <span size='14000' foreground='#4c566a'>|</span> ",
-    "tooltip": false
-  },
-  "custom/separator": {
-    "format":"|",
-    "interval": 3600
-  },
   "custom/variant": {
     "exec": "/home/digo/.config/waybar/custom_widgets/variant.py",
-    "interval": 1,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/santos": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/santos.sh",
-    "interval": 60,
+    "interval": 2,
     "return-type": "json",
     "tooltip": false
   },
@@ -258,40 +156,15 @@
     "tooltip": false,
     "signal": 30
   },
-  "pulseaudio": {
-    "format": "<span rise='1000'>{icon}</span> {volume}%",
-    "format-bluetooth": "{icon} {volume}%",
-    "format-muted": "",
-    "format-icons": {
-      "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
-      "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
-      "headphone": "",
-      "hands-free": "",
-      "headset": "",
-      "phone": "",
-      "phone-muted": "",
-      "portable": "",
-      "car": "",
-      "default": ["", ""]
-    },
-    "scroll-step": 1,
-    "states": {
-      "normal": 40,
-      "warning": 50,
-      "critical": 100
-    },
-    "on-click": "pavucontrol",
-    "ignored-sinks": ["Easy Effects Sink"]
-  },
-  "custom/disk-home": {
+"custom/disk-home": {
     "exec": "/home/digo/.config/waybar/custom_widgets/home.py",
-    "interval": 1,
+    "interval": 60,
     "return-type": "json",
     "tooltip": false
   },
   "custom/disk-hdd": {
     "exec": "/home/digo/.config/waybar/custom_widgets/hdd.py",
-    "interval": 1,
+    "interval": 120,
     "return-type": "json",
     "tooltip": false
   }
