--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -23,6 +23,7 @@
             "2": "WEB",
             "3": "RED",
             "4": "NOT",
+            "5": "MUS",
 
             "urgent": "CIT",
             "default": "ATT",
@@ -32,10 +33,11 @@
             "2": ["HDMI-A-1"], // Always show a workspace with name '3', on all outputs if it does not exists
             "3": ["HDMI-A-1"], // Always show a workspace with name '3', on all outputs if it does not exists
             "4": ["HDMI-A-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+            "5": ["HDMI-A-1"], // Always show a workspace with name '3', on all outputs if it does not exists
         }
     },
   "sway/mode": {
-    "format": "SCRATCH",
+    "format": "MODE",
   },
 "custom/gameon": {
     "exec": "/home/digo/.config/waybar/custom_widgets/gameon.py",
@@ -99,25 +101,25 @@
         "all-outputs": false,
         "format": "{icon}",
         "format-icons": {
-            "5": "WEB",
-            "6": "GLH",
-            "7": "GAM",
-            "8": "STD",
-            "9": "VID",
+            "6": "WEB",
+            "7": "GLH",
+            "8": "GAM",
+            "9": "STD",
+            "10": "VID",
 
             "urgent": "CIT",
             "default": "ATT",
         },
         "persistent-workspaces": {
-            "5": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
             "6": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
             "7": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
             "8": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
             "9": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
+            "10": ["VGA-1"], // Always show a workspace with name '3', on all outputs if it does not exists
         }
     },
   "sway/mode": {
-    "format": "SCRATCH",
+    "format": "MODE",
   },
   "custom/easy": {
     "exec": "/home/digo/.config/waybar/custom_widgets/preset.py",
